@@ -4,6 +4,7 @@ Requires:
 New features:
 ~~~~~~~~~~~~~
 - GenericSetup: Dependent fields don't get exported
+- reupdated the createFile utility + made it image aware
 Bug fixes:
 ~~~~~~~~~~
 -
